# Projeto-Detectar-Passaros

./: .gitignore  .gitignore.save  README.md  SETUP.md  detectar_video_passaros.py  inferencia_passaros.py  preparar_dataset.py  pyproject.toml
dataset_passaros/: README.dataset.txt  README.roboflow.txt  data.yaml
notebooks/: roteiro_alunos_yolo_passaros.ipynb
runs/detect/train/: args.yaml  results.csv
